# noplan

./: .gitignore  Makefile  Makefile.clang  Makefile.gcc  boot.S  debug.gdb  debug.sh  dma.c  dma.h  gpio.c  gpio.h  kernel.c  link.ld  mbox.h  mmio.c  qemu_framebuffer.h  qemu_uart.c  rpi_uart.c  rpi_uart.h  serial.c  serial.h
classic/: README.adoc  boot.S  debug.gdb  dma.c  dma.h  gpio.c  kernel.c  machine.h  mbox.c  mmio.h  qemu_framebuffer.c  qemu_uart.h  rpi_uart.h  serial.c  serial.h
modern/: .gitignore  Cargo.toml  Makefile  README.adoc  build.rs  connect  debug.gdb  debug.sh  kernal
modern/boot/: config.txt
modern/src/: bsp.rs  console.rs  cpu.rs  driver.rs  kernal.rs  kernel.ld  main.rs  mmio.rs  panic_wait.rs  print.rs  rpi_gpio.rs  rpi_regs.rs  rpi_uart.rs  simple_console.rs  sync.rs
modern/src/aarch64/: cpu.rs
modern/src/aarch64/cpu/: boot.S
modern/src/arch/aarch64/: cpu.rs
modern/src/arch/aarch64/cpu/: boot.rs  boot.s
modern/src/bsp/: rpi.rs  utils.rs
modern/src/bsp/rpi/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs  console.rs  driver.rs  kernel.ld  physical_memory_map.rs
modern/src/console/: null_console.rs
modern/src/cpu/: boot.rs
rpi/: uart.c
